--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -1,12 +1,16 @@
+
+
 #home {
-  height: 10%;
+  width: 10%;
 }
 
 #navbar {
-  /* overflow: hidden; */
-  background-color: #333;
+  overflow: hidden;
+  width: 100%;
   display: flex;
-  justify-content: space-between ;
+  background-color: #333;
+  justify-content: space-around ;
+  flex-wrap: wrap;
 }
 
 /* Navbar links */
