--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -24,6 +24,20 @@
   text-decoration: none;
   /* border-right: 1px solid black; */
 }
+.categories {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.category-card {
+  width: 400px;
+  height: 200px;
+  border: 1px solid rgb(75, 75, 75);
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 2px 2px 20px grey
+}
 
 /* Page content */
 /* .content {
