--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -33,7 +33,7 @@
   /* justify-content: space-around; */
   /* flex-wrap: wrap; */
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(450px,1fr));
   grid-gap: 20px;
   gap: 20px;
   justify-items: center;
@@ -79,6 +79,37 @@
   display: flex;
   justify-content: space-around;
   width: 50%;
+}
+
+#admin-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.admin-control  {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(450px,1fr));
+  grid-gap: 20px;
+  gap: 20px;
+  justify-items: center;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.admin-category {
+  width: 400px;
+  height: 200px;
+  border: 1px solid rgb(75, 75, 75);
+  border-radius: 10px;
+  margin-bottom: 20px; 
+  box-shadow: 2px 2px 20px grey
+}
+
+.admin-info {
+  margin-top: 10px;
 }
 /* Page content */
 /* .content {
