--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -117,6 +117,8 @@
   color: #f2f2f2;
   font-weight: 600;
   font-size: large;
+  display: flex;
+  justify-content: space-around;
 }
 
 .plus-icon {
@@ -156,7 +158,7 @@
   width: 30px;
   height: 30px;
   /* margin-top: 5px; */
-  margin-left: 40%;
+  /* margin-left: 40%; */
   text-decoration: none;
   border: none;
   background-color: #333;
@@ -237,4 +239,10 @@
   font-weight: 700;
   /* font-size: large; */
   color: #333;
+}
+
+.add-food-btn {
+  text-decoration: none;
+  border: none;
+  background-color: #333;
 }
