--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -266,3 +266,60 @@
 .edit-area-btn:active {
   transform: scale(0.95 ,0.95);
 }
+
+.login-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+}
+
+.login-card {
+  flex-direction: column;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: 30%;
+  height: 50%;
+  border: 1px solid rgb(75, 75, 75);
+  border-radius: 10px;
+  margin-bottom: 20px; 
+  box-shadow: 2px 2px 20px grey
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15%;
+
+}
+
+.login-form button {
+  margin-top: 15px;
+  width: 100%;
+  height: 30px;
+  background-color: rgb(45, 185, 45);
+  border: 1px solid;
+  border-radius: 10px;
+  font-weight: 700;
+  color: #333;
+}
+
+.login-form button:active {
+  transform: scale(0.95 ,0.95);
+}
+
+.login-header {
+  width: 100%;
+  height: 34px;
+  background-color: #333;
+  border-top-right-radius: 7px 8px;
+  border-top-left-radius: 7px 8px;
+  text-align: center;
+  color: #f2f2f2;
+  font-weight: 600;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+}
+
