--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -334,11 +334,12 @@
 .header {
   display: flex;
   justify-content: center;
-  margin: -2% 0;
+  /* margin: -2% 0; */
   width: 100%;
 }
 .header h1 {
   font-size: 9vh;
+  margin: 0;
 }
 
 
