--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -46,13 +46,20 @@
 .card {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   width: 400px;
   height: 200px;
   border: 1px solid rgb(75, 75, 75);
   border-radius: 10px;
   margin-bottom: 20px; 
-  box-shadow: 2px 2px 20px grey
+  box-shadow: 2px 2px 20px grey;
+  /* color: #f2f2f2; */
+  /* text-shadow:
+    3px 3px 0 #000,
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; */
 }
 
 .display a {
@@ -348,4 +355,9 @@
   align-content: center;
   justify-content: space-around;
   margin-bottom: 10%;
+}
+
+.food-img-comp {
+  display: flex;
+  justify-content: center;
 }
