made it so that the food name and image had equalt amount room to fit in the card

--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -61,6 +61,13 @@
     -1px 1px 0 #000,
     1px 1px 0 #000; */
 }
+.card img{
+  height: 85%;
+}
+
+.card h1 {
+  width: 52%;
+}
 
 .display a {
   text-decoration: none;
