--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -45,7 +45,7 @@
 
 .card {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   /* align-items: center; */
   width: 400px;
   height: 200px;
