--- a/virtual-menu-frontend/src/containers/App.css
+++ b/virtual-menu-frontend/src/containers/App.css
@@ -358,6 +358,36 @@
   margin-bottom: 40px;
 }
 
+/* Res */
+.res-header {
+  height: 40px;
+  background-color: #333;
+  border-top-right-radius: 7px 8px;
+  border-top-left-radius: 7px 8px;
+  text-align: center;
+  color: #f2f2f2;
+  font-weight: 600;
+  font-size: large;
+}
+
+.res-form {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 15% 40px;
+}
+
+.res-form label {
+  margin-bottom: 40px;
+  font-weight: 700;
+  font-size: larger;
+  text-align: center;
+}
+
+.res-form input {
+  margin-bottom: 40px;
+}
+
 .create-btn {
   width: 100%;
   height: 30px;
